# aoc-2020

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
aoc/solutions/day1/: common.py  part1.py  part2.py
aoc/solutions/day2/: common.py  part1.py  part2.py
test/: test_smoke.py
test/solutions/: test_day1.py  test_day2.py
test/solutions/day1/: test_part1.py
